Archive2/03/d6e4cc2af4cedc/output
main.cpp: In function 'int main()':
main.cpp:9:5: error: 'cout' was not declared in this scope
     cout<<strcat(str, str2);
     ^
main.cpp:9:5: note: suggested alternative:
In file included from main.cpp:3:0:
/usr/local/include/c++/4.9.2/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
